--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
 
 website:
   title: "Machine Learning Blog"
-  site-url: https://machinelearningblog.com
+  site-url: https://19sarkars.github.io/MLBlog/
   description: "This is Shivangi Sarkar's blog"
   navbar:
     right:
@@ -16,4 +16,7 @@ format:
     css: styles.css
 
 editor: visual
+
+execute:
+  freeze: auto
 
