--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,9 +1,10 @@
 project:
   type: website
+  output-dir: docs
 
 website:
   title: "Machine Learning Blog"
-  site-url: https://19sarkars.github.io/MLBlog/
+  #site-url: https://19sarkars.github.io/MLBlog/
   description: "This is Shivangi Sarkar's blog"
   navbar:
     right:
