--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,7 +4,7 @@ project:
 
 website:
   title: "Machine Learning Blog"
-  #site-url: https://19sarkars.github.io/MLBlog/
+  site-url: https://19sarkars.github.io/
   description: "This is Shivangi Sarkar's blog"
   navbar:
     right:
